--- a/inventory.yaml
+++ b/inventory.yaml
@@ -1,5 +1,5 @@
-[dbserver]
+[server1]
 192.168.56.102  ansible_python_interpreter=/usr/bin/python3
 
-[fileserver]
+[server2]
 192.168.56.103  ansible_python_interpreter=/usr/bin/python3
